# pre-screen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.ai/context/: context-map.json
.ai/harness/: brain-manifest.json  policy.json  workflow-contract.json
.claude/: .skill-version
.claude/templates/: contract.template.md  design-brief.template.md  implementation-notes.template.md  plan.template.md  prd.template.md  review.template.md  sprint.template.md
apps/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: spec.md
docs/architecture/: index.md
docs/page-api/: 01-login.md  02-dashboard.md  03-task-list.md  04-task-create.md  05-task-detail.md  06-candidate-list.md  07-candidate-detail.md  08-candidate-edit.md  09-paper-editor-publish.md  10-result-list.md  11-result-detail-review.md  12-exam-verify.md  13-exam-session.md  14-exam-submitted.md  15-ai-settings.md  16-exam-monitor-anti-cheat.md  17-frontend-layout-redesign.md  18-system-settings-and-account.md  19-paper-list-and-generate-job.md  AUDIT.md  README.md
docs/reference-configs/: agentic-development-flow.md  document-generation.md  external-tooling.md  global-working-rules.md  (+5 more)
plans/: plan-20260707-1733-fe-upgrade.md  plan-20260707-fe-cleanup-round2.md  plan-20260709-production-cutover.md
scripts/: apply-sql-migrations.py  check_ai_text.py  check_judge0.py  dev-up.sh  extract_resume_batch.py  flyway-migrate.sh  verify-local-stack.sh
tasks/: current.md  todos.md
tests/: conftest.py
(+179 files in other folders)
