[project]
name = "pre-screen"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "minio>=7.2.0",
  "openai>=1.75.0",
  "orjson>=3.10.0",
  "pydantic-settings>=2.8.0",
  "pydantic>=2.10.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.0",
  "pymupdf>=1.27.0",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "respx>=0.22.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "packages/backend-common/src"]
testpaths = ["tests", "services"]

[tool.ruff]
line-length = 100
target-version = "py312"
